--- a/public/sass/_partials/_banner.scss
+++ b/public/sass/_partials/_banner.scss
@@ -13,15 +13,11 @@
 
 .banner-2 {
     height: auto;
-    margin: 0 0 40px 0;
-    padding-left: 20%;
+    margin: -100px 0;
     @media (max-width: 580px) {
         margin: -100px 0;
     }
     @media (max-width: 415px) {
         margin: -50px 0;
-    }
-    img {
-        max-width: 100%;
     }
 }
