--- a/public/sass/_partials/_navbar.scss
+++ b/public/sass/_partials/_navbar.scss
@@ -134,8 +134,8 @@
                     text-align: center;
                     cursor: pointer;
                     &:hover, &:focus, &:active {
-                        background: $dark-grey;
-                        color: white;
+                        background: $contrast;
+                        color: $dark-grey;
                     }
                     @media (max-width: 850px) {
                         font-size: 1rem;
