--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,8 @@
 <section id="reasons">
     <div class="container">
-        <h2 class="section-title">Onze redenen</h2>
+        <div class="title-container">
+            <h2 class="section-title">Onze redenen</h2>
+        </div>
         <div class="row all-reasons">
             <div class="column profit" onclick="selectReason('profit')">
                 <div class="circle">
@@ -68,7 +70,9 @@
 
 <section id="solutions">
     <div class="container">
-        <h2 class="section-title">Onze oplossingen</h2>
+        <div class="title-container">
+            <h2 class="section-title">Onze oplossingen</h2>
+        </div>
         <div class="solution-blocks">
             <div class="solution-block strategy">
                 <h4 class="sol-title"><span class="fa fa-comments"></span> Strategy as a Service</h4>
@@ -128,11 +132,11 @@
                     <p>Schrijf je in voor onze nieuwsbrief!</p>
                     <!-- Begin MailChimp Signup Form -->
                     <div id="mc_embed_signup">
-                        <form action="https://again.us8.list-manage.com/subscribe/post?u=53785b16e31b45f83200436f2&amp;id=81a374215f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <form action="https://again.us8.list-manage.com/subscribe/post?u=53785b16e31b45f83200436f2&amp;id=4f03c9991a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
                                 <div class="indicates-required">Velden met een <span class="asterisk">*</span> zijn vereist</div>
                                 <div class="mc-field-group">
-                                    <label for="mce-EMAIL">Email  <span class="asterisk">*</span></label>
+                                    <label for="mce-EMAIL">Email <span class="asterisk">*</span></label>
                                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                                 </div>
                                 <div class="mc-field-group">
@@ -147,8 +151,8 @@
                                     <div class="response" id="mce-error-response" style="display:none"></div>
                                     <div class="response" id="mce-success-response" style="display:none"></div>
                                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53785b16e31b45f83200436f2_81a374215f" tabindex="-1" value=""></div>
-                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn-primary"></div>
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53785b16e31b45f83200436f2_4f03c9991a" tabindex="-1" value=""></div>
+                                <div class="clear"><input class="btn-primary" type="submit" value="Inschrijven" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                             </div>
                         </form>
                     </div>
