--- a/public/sass/_partials/_hero-slider.scss
+++ b/public/sass/_partials/_hero-slider.scss
@@ -45,7 +45,7 @@
             }
         }
         .slide-1 {
-            background-image: url('https://againtest.azurewebsites.net/public/images/profit-overlay.jpg');
+            background-image: url('http://localhost:3000/public/images/profit-overlay.jpg');
             .text {
                 @media (max-width: 575px) {
                     bottom: 50%;
@@ -77,7 +77,7 @@
             }
         }
         .slide-2 {
-            background-image: url('https://againtest.azurewebsites.net/public/images/planet-overlay.jpg');
+            background-image: url('http://localhost:3000/public/images/planet-overlay.jpg');
             .text {
                 bottom: 60%;
                 right: 5%;
@@ -106,7 +106,7 @@
             }
         }
         .slide-3 {
-            background-image: url('https://againtest.azurewebsites.net/public/images/people-overlay.jpg');
+            background-image: url('http://localhost:3000/public/images/people-overlay.jpg');
             .text {
                 bottom: 45%;
                 width: 65%;
@@ -151,7 +151,8 @@
                 bottom: 20%;
                 transform: translateX(-50%);
             }
-            .btn-white-transparent-xl {
+            .btn-white-transparent-xl,
+            .btn-contrast-transparent-xl {
                 width: 200px;
                 margin-bottom: 10px;
                 @media (max-width: 575px) {
