--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -103,7 +103,10 @@
 </section>
 
 <div class="banner banner-2">
-    <img src="./public/images/desktop.jpg" alt="Desktop Banner">
+    {{!-- <img src="./public/images/desktop.jpg" alt="Desktop Banner"> --}}
+    <div class="banner-text">
+        <h2>Stretch your flex!</h2>
+    </div>
 </div>
 
 <section id="three-colums">
