--- a/public/sass/_partials/_base-styles.scss
+++ b/public/sass/_partials/_base-styles.scss
@@ -147,6 +147,29 @@ label {
     font-size: 1.4rem;
 }
 
+.btn-contrast-transparent {
+    @extend %btn;
+    background-color: rgba(255, 255, 255, 0.6);
+    border: 3px solid $contrast;
+    color: $dark-grey; 
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+    &:disabled, 
+    &[disabled] {
+        cursor: not-allowed;
+        background-color: rgba(255, 255, 255, 0.7);
+    }
+}
+
+.btn-contrast-transparent-xl {
+    @extend .btn-contrast-transparent;
+    padding: 15px 20px;
+    font-size: 1.4rem;
+}
+
 .btn-primary {
     @extend %btn;
     background-color: $primary;
