--- a/public/css/style.css
+++ b/public/css/style.css
@@ -964,7 +964,11 @@ section .title-container .section-title {
 #reasons .all-reasons .column:hover .circle #people-icon .cls-2, #reasons .all-reasons .column:focus .circle #people-icon .cls-2, #reasons .all-reasons .column:active .circle #people-icon .cls-2, #reasons .all-reasons .column .circle.active #people-icon .cls-2 {
   fill: #3a3a3c;
 }
-/* line 54, ../sass/_partials/_sections.scss */
+/* line 53, ../sass/_partials/_sections.scss */
+#reasons .all-reasons .column:hover .circle .fa, #reasons .all-reasons .column:focus .circle .fa, #reasons .all-reasons .column:active .circle .fa, #reasons .all-reasons .column .circle.active .fa {
+  color: white;
+}
+/* line 57, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .circle {
   background-color: #ececec;
   width: 80%;
@@ -973,7 +977,7 @@ section .title-container .section-title {
   position: relative;
   transition: background-color 0.8s;
 }
-/* line 61, ../sass/_partials/_sections.scss */
+/* line 64, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .circle img, #reasons .all-reasons .column .circle svg {
   height: 60%;
   position: absolute;
@@ -982,25 +986,35 @@ section .title-container .section-title {
   transform: translate(-50%, -50%);
   transition: all 1s;
 }
-/* line 69, ../sass/_partials/_sections.scss */
+/* line 72, ../sass/_partials/_sections.scss */
+#reasons .all-reasons .column .circle .fa {
+  font-size: 8rem;
+  display: inline-block;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #2b2b2b;
+}
+/* line 81, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .circle #profit-icon {
   left: 55%;
 }
-/* line 71, ../sass/_partials/_sections.scss */
+/* line 83, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .circle #profit-icon .cls-1, #reasons .all-reasons .column .circle #profit-icon .cls-2 {
   fill: #2b2b2b;
 }
-/* line 74, ../sass/_partials/_sections.scss */
+/* line 86, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .circle #profit-icon .cls-2 {
   stroke: white;
   stroke-miterlimit: 10;
   stroke-width: 4px;
 }
-/* line 81, ../sass/_partials/_sections.scss */
+/* line 93, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .circle #people-icon .cls-1 {
   fill: #868689;
 }
-/* line 84, ../sass/_partials/_sections.scss */
+/* line 96, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .circle #people-icon .cls-2 {
   fill: #2b2b2b;
   stroke: white;
@@ -1008,12 +1022,12 @@ section .title-container .section-title {
   stroke-width: 5;
 }
 @media (max-width: 480px) {
-  /* line 54, ../sass/_partials/_sections.scss */
+  /* line 57, ../sass/_partials/_sections.scss */
   #reasons .all-reasons .column .circle {
     display: none;
   }
 }
-/* line 95, ../sass/_partials/_sections.scss */
+/* line 107, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .block-title {
   width: 80%;
   margin: 0 auto;
@@ -1023,61 +1037,61 @@ section .title-container .section-title {
   position: relative;
   top: -12%;
 }
-/* line 103, ../sass/_partials/_sections.scss */
+/* line 115, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .column .block-title h4 {
   margin: 0;
   color: white;
 }
 @media (max-width: 768px) {
-  /* line 103, ../sass/_partials/_sections.scss */
+  /* line 115, ../sass/_partials/_sections.scss */
   #reasons .all-reasons .column .block-title h4 {
     font-size: 1.5rem;
   }
 }
 @media (max-width: 480px) {
-  /* line 95, ../sass/_partials/_sections.scss */
+  /* line 107, ../sass/_partials/_sections.scss */
   #reasons .all-reasons .column .block-title {
     width: 95%;
   }
 }
 @media (max-width: 480px) {
-  /* line 114, ../sass/_partials/_sections.scss */
+  /* line 126, ../sass/_partials/_sections.scss */
   #reasons .all-reasons .column .block-title.active {
     background: #4d376b;
   }
 }
-/* line 120, ../sass/_partials/_sections.scss */
+/* line 132, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .profit .circle, #reasons .all-reasons .profit .block-title {
   margin: 0;
 }
-/* line 123, ../sass/_partials/_sections.scss */
+/* line 135, ../sass/_partials/_sections.scss */
 #reasons .all-reasons .people .circle, #reasons .all-reasons .people .block-title {
   margin: 0 0 0 auto;
 }
-/* line 128, ../sass/_partials/_sections.scss */
+/* line 140, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .block-reason {
   display: flex;
   justify-content: space-between;
   position: relative;
 }
-/* line 132, ../sass/_partials/_sections.scss */
+/* line 144, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .block-reason .text-block {
   width: 47%;
   overflow: hidden;
 }
 @media (max-width: 480px) {
-  /* line 132, ../sass/_partials/_sections.scss */
+  /* line 144, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .block-reason .text-block {
     width: 65%;
   }
 }
 @media (max-width: 360px) {
-  /* line 132, ../sass/_partials/_sections.scss */
+  /* line 144, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .block-reason .text-block {
     width: 100%;
   }
 }
-/* line 141, ../sass/_partials/_sections.scss */
+/* line 153, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .block-reason .text-block h4 {
   background: #71519d;
   margin: 0;
@@ -1085,7 +1099,7 @@ section .title-container .section-title {
   text-align: center;
   color: white;
 }
-/* line 148, ../sass/_partials/_sections.scss */
+/* line 160, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .block-reason .text-block p {
   background: #ececec;
   margin: 0;
@@ -1093,18 +1107,18 @@ section .title-container .section-title {
   height: 100%;
 }
 @media (max-width: 480px) {
-  /* line 148, ../sass/_partials/_sections.scss */
+  /* line 160, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .block-reason .text-block p {
     padding-right: 30px;
   }
 }
 @media (max-width: 360px) {
-  /* line 148, ../sass/_partials/_sections.scss */
+  /* line 160, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .block-reason .text-block p {
     padding-right: 20px;
   }
 }
-/* line 161, ../sass/_partials/_sections.scss */
+/* line 173, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .block-reason .icon-block {
   width: 15%;
   background: #ececec;
@@ -1115,27 +1129,27 @@ section .title-container .section-title {
   transform: translate(-50%, -50%);
 }
 @media (max-width: 480px) {
-  /* line 161, ../sass/_partials/_sections.scss */
+  /* line 173, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .block-reason .icon-block {
     left: 60%;
     width: 20%;
   }
 }
 @media (max-width: 360px) {
-  /* line 161, ../sass/_partials/_sections.scss */
+  /* line 173, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .block-reason .icon-block {
     display: none;
   }
 }
-/* line 176, ../sass/_partials/_sections.scss */
-#reasons .block-reasons .block-reason .icon-block img {
-  height: 60%;
+/* line 188, ../sass/_partials/_sections.scss */
+#reasons .block-reasons .block-reason .icon-block img, #reasons .block-reasons .block-reason .icon-block span {
+  font-size: 4rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-/* line 184, ../sass/_partials/_sections.scss */
+/* line 197, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .block-reason .image-block {
   width: 47%;
   background-repeat: no-repeat;
@@ -1143,40 +1157,40 @@ section .title-container .section-title {
   background-size: cover;
 }
 @media (max-width: 360px) {
-  /* line 184, ../sass/_partials/_sections.scss */
+  /* line 197, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .block-reason .image-block {
     display: none;
   }
 }
-/* line 194, ../sass/_partials/_sections.scss */
+/* line 207, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .profit .image-block {
   background-image: url("https://againtest.azurewebsites.net/public/images/profit.jpg");
 }
-/* line 197, ../sass/_partials/_sections.scss */
+/* line 210, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .profit .icon-block img {
   margin-left: 2%;
 }
 @media (max-width: 360px) {
-  /* line 197, ../sass/_partials/_sections.scss */
+  /* line 210, ../sass/_partials/_sections.scss */
   #reasons .block-reasons .profit .icon-block img {
     margin-left: 5%;
   }
 }
-/* line 203, ../sass/_partials/_sections.scss */
+/* line 216, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .planet .image-block {
   background-image: url("https://againtest.azurewebsites.net/public/images/planet.jpg");
 }
-/* line 206, ../sass/_partials/_sections.scss */
+/* line 219, ../sass/_partials/_sections.scss */
 #reasons .block-reasons .people .image-block {
   background-image: url("https://againtest.azurewebsites.net/public/images/people.jpg");
 }
 
-/* line 213, ../sass/_partials/_sections.scss */
+/* line 226, ../sass/_partials/_sections.scss */
 #solutions .solution-blocks {
   display: flex;
   flex-wrap: wrap;
 }
-/* line 216, ../sass/_partials/_sections.scss */
+/* line 229, ../sass/_partials/_sections.scss */
 #solutions .solution-blocks .solution-block {
   width: 49%;
   margin-left: 1%;
@@ -1185,12 +1199,12 @@ section .title-container .section-title {
   margin-bottom: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-/* line 223, ../sass/_partials/_sections.scss */
+/* line 236, ../sass/_partials/_sections.scss */
 #solutions .solution-blocks .solution-block:nth-child(odd) {
   margin-left: 0;
   margin-right: 1%;
 }
-/* line 227, ../sass/_partials/_sections.scss */
+/* line 240, ../sass/_partials/_sections.scss */
 #solutions .solution-blocks .solution-block .sol-title {
   border-bottom: 1px solid white;
   text-align: center;
@@ -1200,36 +1214,36 @@ section .title-container .section-title {
   background: linear-gradient(rgba(113, 81, 157, 0.25), rgba(113, 81, 157, 0.25)), url("http://localhost:3000/public/images/building-block.jpg") no-repeat center;
   background-size: cover;
 }
-/* line 243, ../sass/_partials/_sections.scss */
+/* line 256, ../sass/_partials/_sections.scss */
 #solutions .solution-blocks .solution-block .sol-text {
   padding: 15px;
 }
 
 @media (max-width: 580px) {
-  /* line 251, ../sass/_partials/_sections.scss */
+  /* line 264, ../sass/_partials/_sections.scss */
   #three-colums .row {
     flex-direction: column;
   }
 }
-/* line 255, ../sass/_partials/_sections.scss */
+/* line 268, ../sass/_partials/_sections.scss */
 #three-colums .row .column {
   background-color: #ececec;
   margin-right: 15px;
   padding: 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-/* line 260, ../sass/_partials/_sections.scss */
+/* line 273, ../sass/_partials/_sections.scss */
 #three-colums .row .column:last-child {
   margin-right: 0;
 }
 @media (max-width: 580px) {
-  /* line 255, ../sass/_partials/_sections.scss */
+  /* line 268, ../sass/_partials/_sections.scss */
   #three-colums .row .column {
     margin-bottom: 20px;
     margin-right: 0;
   }
 }
-/* line 267, ../sass/_partials/_sections.scss */
+/* line 280, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-title {
   margin: 0;
   padding: 10px;
@@ -1238,22 +1252,22 @@ section .title-container .section-title {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
 }
 @media (max-width: 678px) {
-  /* line 267, ../sass/_partials/_sections.scss */
+  /* line 280, ../sass/_partials/_sections.scss */
   #three-colums .row .column .column-title {
     font-size: 1.6rem;
   }
 }
-/* line 277, ../sass/_partials/_sections.scss */
+/* line 290, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-text {
   padding: 0 15px 15px 15px;
 }
 @media (max-width: 678px) {
-  /* line 277, ../sass/_partials/_sections.scss */
+  /* line 290, ../sass/_partials/_sections.scss */
   #three-colums .row .column .column-text {
     padding: 0 10px 10px 10px;
   }
 }
-/* line 282, ../sass/_partials/_sections.scss */
+/* line 295, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-text .indicates-required {
   font-size: 0.8rem;
   margin-bottom: 10px;
