--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -96,13 +96,16 @@
             <li class="menu-item menu-item-2">
                 <a onclick="menuClick('#solutions')">Onze oplossingen</a>
             </li>
-            <li class="menu-item menu-item-3">
-                <a onclick="menuClick('#technology')">Technologie</a>
+            <li class="menu-item menu-items-3">
+                <a onclick="menuClick('#news')">Nieuws</a>
             </li>
             <li class="menu-item menu-item-4">
-                <a onclick="menuClick('#careers')">Vacatures</a>
+                <a onclick="menuClick('#technology')">Technologie</a>
             </li>
             <li class="menu-item menu-item-5">
+                <a onclick="menuClick('#careers')">Vacatures</a>
+            </li>
+            <li class="menu-item menu-item-6">
                 <a onclick="menuClick('#mailing')">Mailing list</a>
             </li>
         </ul>
