--- a/public/css/style.css
+++ b/public/css/style.css
@@ -701,6 +701,12 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   height: 9vh;
   float: left;
 }
+@media (max-width: 856px) {
+  /* line 9, ../sass/_partials/_navbar.scss */
+  #nav-bar .left-menu {
+    width: 15%;
+  }
+}
 @media (max-width: 768px) {
   /* line 9, ../sass/_partials/_navbar.scss */
   #nav-bar .left-menu {
@@ -714,31 +720,37 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
     padding: 4px 0 4px 35px;
   }
 }
-/* line 21, ../sass/_partials/_navbar.scss */
+/* line 24, ../sass/_partials/_navbar.scss */
 #nav-bar .left-menu img {
   height: 100%;
   cursor: pointer;
 }
-/* line 26, ../sass/_partials/_navbar.scss */
+/* line 29, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu {
   display: inline-block;
   width: 74%;
   height: 9vh;
   padding-right: 20px;
 }
+@media (max-width: 856px) {
+  /* line 29, ../sass/_partials/_navbar.scss */
+  #nav-bar .right-menu {
+    width: 84%;
+  }
+}
 @media (max-width: 768px) {
-  /* line 26, ../sass/_partials/_navbar.scss */
+  /* line 29, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu {
     width: 49%;
   }
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 26, ../sass/_partials/_navbar.scss */
+  /* line 29, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu {
     height: 14vh;
   }
 }
-/* line 37, ../sass/_partials/_navbar.scss */
+/* line 43, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle {
   display: flex;
   justify-content: flex-end;
@@ -747,12 +759,12 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   font-size: 1.4rem;
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 37, ../sass/_partials/_navbar.scss */
+  /* line 43, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .mobile-toggle {
     height: 14vh;
   }
 }
-/* line 46, ../sass/_partials/_navbar.scss */
+/* line 52, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon {
   width: 40px;
   height: 25px;
@@ -761,7 +773,7 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   transition: 0.5s ease-in-out;
   cursor: pointer;
 }
-/* line 53, ../sass/_partials/_navbar.scss */
+/* line 59, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon span {
   display: block;
   position: absolute;
@@ -774,45 +786,45 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   transform: rotate(0deg);
   transition: .25s ease-in-out;
 }
-/* line 64, ../sass/_partials/_navbar.scss */
+/* line 70, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(1) {
   top: 0px;
   transform-origin: left center;
 }
-/* line 68, ../sass/_partials/_navbar.scss */
+/* line 74, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(2) {
   top: 10px;
   transform-origin: left center;
 }
-/* line 72, ../sass/_partials/_navbar.scss */
+/* line 78, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon span:nth-child(3) {
   top: 20px;
   transform-origin: left center;
 }
-/* line 79, ../sass/_partials/_navbar.scss */
+/* line 85, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(1) {
   transform: rotate(45deg);
   top: -3px;
   left: 8px;
 }
-/* line 84, ../sass/_partials/_navbar.scss */
+/* line 90, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
-/* line 88, ../sass/_partials/_navbar.scss */
+/* line 94, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .mobile-toggle .nav-icon.open span:nth-child(3) {
   transform: rotate(-45deg);
   top: 26px;
   left: 8px;
 }
 @media (min-width: 769px) {
-  /* line 37, ../sass/_partials/_navbar.scss */
+  /* line 43, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .mobile-toggle {
     display: none;
   }
 }
-/* line 98, ../sass/_partials/_navbar.scss */
+/* line 104, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .menu-items {
   height: 9vh;
   margin: 0;
@@ -824,7 +836,7 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   padding-left: 0;
 }
 @media (max-width: 768px) {
-  /* line 98, ../sass/_partials/_navbar.scss */
+  /* line 104, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .menu-items {
     position: absolute;
     background: #f5f5f5;
@@ -837,22 +849,22 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   }
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 98, ../sass/_partials/_navbar.scss */
+  /* line 104, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .menu-items {
     height: auto;
   }
 }
 @media (max-width: 768px) {
-  /* line 120, ../sass/_partials/_navbar.scss */
+  /* line 126, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .menu-items .menu-item {
     padding: 12px 35px 12px 0;
   }
-  /* line 123, ../sass/_partials/_navbar.scss */
+  /* line 129, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .menu-items .menu-item:last-child {
     padding-bottom: 16px;
   }
 }
-/* line 127, ../sass/_partials/_navbar.scss */
+/* line 133, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .menu-items .menu-item a {
   color: #2b2b2b;
   font-family: "ZwoOT-SemiBd", Helvetica, Arial, sans-serif;
@@ -863,26 +875,27 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   text-align: center;
   cursor: pointer;
 }
-/* line 136, ../sass/_partials/_navbar.scss */
+/* line 142, ../sass/_partials/_navbar.scss */
 #nav-bar .right-menu .menu-items .menu-item a:hover, #nav-bar .right-menu .menu-items .menu-item a:focus, #nav-bar .right-menu .menu-items .menu-item a:active {
   background: #ffd400;
   color: #2b2b2b;
 }
-@media (max-width: 850px) {
-  /* line 127, ../sass/_partials/_navbar.scss */
+@media (max-width: 1070px) {
+  /* line 133, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .menu-items .menu-item a {
     font-size: 1rem;
+    padding: 3vh 10px;
   }
 }
 @media (max-width: 768px) {
-  /* line 127, ../sass/_partials/_navbar.scss */
+  /* line 133, ../sass/_partials/_navbar.scss */
   #nav-bar .right-menu .menu-items .menu-item a {
     text-align: left;
     padding: 0;
   }
 }
 
-/* line 152, ../sass/_partials/_navbar.scss */
+/* line 159, ../sass/_partials/_navbar.scss */
 #nav-bar.sticky {
   position: fixed;
   top: 0;
@@ -890,7 +903,7 @@ a.btn-primary, a.btn-primary-xl, a.btn-dark-grey-xl {
   margin-bottom: 9vh;
 }
 @media (max-width: 1024px) and (max-height: 485px) and (orientation: landscape) {
-  /* line 152, ../sass/_partials/_navbar.scss */
+  /* line 159, ../sass/_partials/_navbar.scss */
   #nav-bar.sticky {
     margin-bottom: 14vh;
   }
@@ -1218,32 +1231,41 @@ section .title-container .section-title {
 #solutions .solution-blocks .solution-block .sol-text {
   padding: 15px;
 }
+/* line 258, ../sass/_partials/_sections.scss */
+#solutions .solution-blocks .solution-block .sol-text ul li {
+  list-style-type: square;
+  margin-bottom: 4px;
+}
+/* line 262, ../sass/_partials/_sections.scss */
+#solutions .solution-blocks .solution-block .sol-text .img {
+  width: 50%;
+}
 
 @media (max-width: 580px) {
-  /* line 264, ../sass/_partials/_sections.scss */
+  /* line 271, ../sass/_partials/_sections.scss */
   #three-colums .row {
     flex-direction: column;
   }
 }
-/* line 268, ../sass/_partials/_sections.scss */
+/* line 275, ../sass/_partials/_sections.scss */
 #three-colums .row .column {
   background-color: #ececec;
   margin-right: 15px;
   padding: 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-/* line 273, ../sass/_partials/_sections.scss */
+/* line 280, ../sass/_partials/_sections.scss */
 #three-colums .row .column:last-child {
   margin-right: 0;
 }
 @media (max-width: 580px) {
-  /* line 268, ../sass/_partials/_sections.scss */
+  /* line 275, ../sass/_partials/_sections.scss */
   #three-colums .row .column {
     margin-bottom: 20px;
     margin-right: 0;
   }
 }
-/* line 280, ../sass/_partials/_sections.scss */
+/* line 287, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-title {
   margin: 0;
   padding: 10px;
@@ -1252,22 +1274,22 @@ section .title-container .section-title {
   font-family: "ZwoOT-Xbold", Helvetica, Arial, sans-serif;
 }
 @media (max-width: 678px) {
-  /* line 280, ../sass/_partials/_sections.scss */
+  /* line 287, ../sass/_partials/_sections.scss */
   #three-colums .row .column .column-title {
     font-size: 1.6rem;
   }
 }
-/* line 290, ../sass/_partials/_sections.scss */
+/* line 297, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-text {
   padding: 0 15px 15px 15px;
 }
 @media (max-width: 678px) {
-  /* line 290, ../sass/_partials/_sections.scss */
+  /* line 297, ../sass/_partials/_sections.scss */
   #three-colums .row .column .column-text {
     padding: 0 10px 10px 10px;
   }
 }
-/* line 295, ../sass/_partials/_sections.scss */
+/* line 302, ../sass/_partials/_sections.scss */
 #three-colums .row .column .column-text .indicates-required {
   font-size: 0.8rem;
   margin-bottom: 10px;
